--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
   <h2>Total Score</h2>
     <p id='score'></p>
 
+<p>Link to my partner's game!</p>
+  <ul>
+    <li><a href ="http://tinouye.github.io/Guessing/">Tomi's Guessing Game</a></li>
+  </ul>
+
   <script src="game.js"></script>
 </body>
 </html>
